--- a/MedicalAssistant/Properties/Resources.resx
+++ b/MedicalAssistant/Properties/Resources.resx
@@ -163,6 +163,9 @@
   <data name="live" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\live.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="NoInternetArabic" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NoInternetArabic.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="received_264768345150339" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\received_264768345150339.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
